243769: Make SQL scrapbook more easily accessable

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -31,7 +31,7 @@ datatools.preferences.sqlfile.name=SQL Files/Scrapbooks
 DatabaseManagement.command.attach=Set Connection Information
 
 sql_scrapbook=SQL Scrapbook
-open_sql_scrapbook=Open SQL Scrapboo&amp;k
+open_sql_scrapbook=Open SQL Scrapboo&k
 open_sql_scrapbook_tooltip=Open scrapbook to edit SQL statements
 
 DatabaseManagement.ExecuteSQLFile=E&xecute SQL Files
