--- a/plugins/org.eclipse.datatools.oda.cshelp/about.properties
+++ b/plugins/org.eclipse.datatools.oda.cshelp/about.properties
@@ -4,11 +4,11 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-aboutText=Data Tools ODA Context Sensitive Help\n\
+aboutText=Data Tools Platform ODA Context Sensitive Help\n\
 \n\
 Version: @Replace_By_Version@\n\
 Build id: {0}\n\
 \n\
-(c) Copyright Eclipse contributors and others 2002, 2007.  All rights reserved.\n\
+(c) Copyright Eclipse contributors and others 2002, 2008.  All rights reserved.\n\
 Visit http://www.eclipse.org/datatools
 
