--- a/features/org.eclipse.datatools.doc.user/feature.properties
+++ b/features/org.eclipse.datatools.doc.user/feature.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2008 Sybase, Inc.
+# Copyright (c) 2008 Sybase, Inc. and others.
 # All rights reserved.
 #
 # Properties for feature: org.eclipse.datatools.doc.user
@@ -15,7 +15,7 @@ providerName = Eclipse.org
 
 featureDesc = Data Tools Platform Documentation Feature
 
-featureCopyright = Copyright (c) 2008 Sybase, Inc. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
+featureCopyright = Copyright (c) 2008 Sybase, Inc. and others. All rights reserved. This program and the accompanying materials are made available under the terms of the Eclipse Public License v1.0 which accompanies this distribution, and is available at http://www.eclipse.org/legal/epl-v10.html
 
 featureLicenseURL = license.html
 
