Update updatesite name for doc features

--- a/features/org.eclipse.datatools.common.doc.user/feature.properties
+++ b/features/org.eclipse.datatools.common.doc.user/feature.properties
@@ -121,11 +121,11 @@ Java and all Java-based trademarks are trademarks of Sun Microsystems, Inc. in t
 #
 updateSiteURL = http://download.eclipse.org/datatools/updates
 #
-featureUpdateSiteName = DTP Update Site
+featureUpdateSiteName = Data Tools Platform (DTP) Updates
 #
 discoverySiteURL = http://download.eclipse.org/datatools/updates
 #
-featureDiscoverySiteName = DTP Update Site
+featureDiscoverySiteName = Data Tools Platform (DTP) Updates
 #
 featureDiscoverySiteType = update
 #
