--- a/features/org.eclipse.datatools.connectivity.oda.designer.feature/feature.properties
+++ b/features/org.eclipse.datatools.connectivity.oda.designer.feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2006/04/24 19:57:46 jgraham Exp $
+#  * $Id: feature.properties,v 1.1 2008/02/04 21:22:24 jgraham Exp $
 #  */
 
 # "featureName" property - name of the feature
@@ -22,7 +22,7 @@ featureName=Data Tools Platform Open Data Access Designer
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse.org update site
+updateSiteName=Data Tools Platform (DTP) Updates
 
 # "description" property - description of the feature
 description=Binaries Data Tools Platform Open Data Access Designer
