--- a/features/org.eclipse.datatools.enablement.hsqldb.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.hsqldb.feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.5 2005/06/08 06:23:46 nickb Exp $
+#  * $Id: feature.properties,v 1.1 2008/02/04 21:22:27 jgraham Exp $
 #  */
 
 # "featureName" property - name of the feature
@@ -22,7 +22,7 @@ featureName=Data Tools Platform Enablement for HSQLDB
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse.org update site
+updateSiteName=Data Tools Platform (DTP) Updates
 
 # "description" property - description of the feature
 description=DTP support for using the HSQLDB database
