--- a/features/org.eclipse.datatools.enablement.sybase.feature/feature.properties
+++ b/features/org.eclipse.datatools.enablement.sybase.feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2008/02/04 21:22:29 jgraham Exp $
+#  * $Id: feature.properties,v 1.2 2008/05/30 21:35:40 bfitzpatrick Exp $
 #  */
 
 # "featureName" property - name of the feature
@@ -22,7 +22,7 @@ featureName=Data Tools Platform Enablement for Sybase
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse.org update site
+updateSiteName=Data Tools Platform (DTP) Updates
 
 # "description" property - description of the feature
 description=DTP support for using Sybase databases (ASE and ASA)
