--- a/features/org.eclipse.datatools.sdk-all.feature/feature.properties
+++ b/features/org.eclipse.datatools.sdk-all.feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2008/02/19 09:43:19 xgu Exp $
+#  * $Id: feature.properties,v 1.1 2008/02/21 20:36:49 jgraham Exp $
 #  */
 
 # "featureName" property - name of the feature
@@ -22,7 +22,7 @@ featureName=Data Tools Platform Extender SDK
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse.org update site
+updateSiteName=Data Tools Platform (DTP) Updates
 
 # "description" property - description of the feature
 description=Binaries, API documentation and source zips for DTP
