--- a/features/org.eclipse.datatools.sdk.feature/sourceTemplateFeature/feature.properties
+++ b/features/org.eclipse.datatools.sdk.feature/sourceTemplateFeature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.2 2008/02/22 08:50:27 xgu Exp $
+#  * $Id: feature.properties,v 1.1 2008/03/04 09:43:13 xgu Exp $
 #  */
 
 # NLS_MESSAGEFORMAT_VAR
@@ -41,6 +41,8 @@ description=Datatools Source
 # "licenseURL" property - URL of the "Feature License"
 # do not translate value - just change to point to a locale-specific HTML page
 licenseURL=license.html
+
+updateSiteName=Data Tools Platform (DTP) Updates
 
 # "license" property - text of the "Feature Update License"
 # should be plain text version of license agreement pointed to be "licenseURL"
