--- a/features/org.eclipse.datatools.sqldevtools.sqlbuilder.feature/feature.properties
+++ b/features/org.eclipse.datatools.sqldevtools.sqlbuilder.feature/feature.properties
@@ -12,7 +12,7 @@
 #  *
 #  * </copyright>
 #  *
-#  * $Id: feature.properties,v 1.1 2008/04/21 21:31:45 jgraham Exp $
+#  * $Id: feature.properties,v 1.1 2008/04/21 21:34:22 jgraham Exp $
 #  */
 
 # "featureName" property - name of the feature
@@ -22,7 +22,7 @@ featureName=Data Tools Platform SQL Query Builder
 providerName=Eclipse.org
 
 # "updateSiteName" property - label for the update site
-updateSiteName=Eclipse.org update site
+updateSiteName=Data Tools Platform (DTP) Updates
 
 # "description" property - description of the feature
 description=Editor for building SQL queries
