[250187]  Trigger name is not decorated with trigger event

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -114,6 +114,7 @@ datatools.core.ui.modelexplorer.modelExplorerForeignKeyDecoration = Data Tools -
 datatools.core.ui.modelexplorer.DependencyDecoration = Data Tools - Dependency Decoration
 datatools.core.ui.modelexplorer.bookmarkDecoration  = Data Tools - Bookmark Indicator
 datatools.core.ui.modelexplorer.filterDecoration = Data Tools - Server Explorer Filter Node Indicator
+datatools.core.ui.modelexplorer.indextriggerDecoration = Data Tools - Index and Trigger Decoration
 
 #
 ## Model Explorer Sorter Provider
