--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -46,7 +46,7 @@ DSE.ContentExtension.Decorator = Connection Profile Decorator
 DSE.ContentExtension.Decorator.Description = Decorate content extension node when connecting to the server fails.
 DSE.content.extended = Data Source Explorer Extension w/Drop Support
 
-category.name.dataTools = SQL Development
+category.name.dataTools = Data Management
 category.name.connectivity = Connectivity
 
 General = General
