--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -11,5 +11,5 @@ driverPWD = Password
 org.eclipse.datatools.connectivity.db.driverCategory = Database
 org.eclipse.datatools.connectivity.db.generic.genericDriverCategory = Generic JDBC
 org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate = Generic JDBC Driver
-databases.category = Databases
+databases.category = Database Connections
 generic.profile.name = SQL Model-JDBC Connection
