CheckIn:Bugzilla#251805--The title of row mapping page in WS data set wizard and its corresponding help content should be "Row Mapping"  just as in XML data set wizard

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/plugin.properties
@@ -31,5 +31,5 @@ oda.ws.operation=WSDL Operation
 oda.ws.soapparameters=SOAP Parameters
 oda.ws.soaprequest=SOAP Request
 oda.ws.soapresponse=SOAP Response
-oda.ws.tablemapping=Table Mapping
+oda.ws.tablemapping=Row Mapping
 oda.ws.columnmapping=Column Mapping
