--- a/features/org.eclipse.datatools.sdk-all.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk-all.feature/build.properties
@@ -17,6 +17,7 @@ generate.feature@org.eclipse.datatools.sqldevtools.ddl.feature.source = org.ecli
 generate.feature@org.eclipse.datatools.sqldevtools.ddlgen.feature.source = org.eclipse.datatools.sqldevtools.ddlgen.feature
 generate.feature@org.eclipse.datatools.sqldevtools.parsers.feature.source = org.eclipse.datatools.sqldevtools.parsers.feature
 generate.feature@org.eclipse.datatools.sqldevtools.results.feature.source = org.eclipse.datatools.sqldevtools.results.feature
+generate.feature@org.eclipse.datatools.sqldevtools.sqlbuilder.feature.source=org.eclipse.datatools.sqldevtools.sqlbuilder.feature
 generate.feature@org.eclipse.datatools.intro.source=org.eclipse.datatools.intro
 generate.feature@org.eclipse.datatools.enablement.feature.source=org.eclipse.datatools.enablement.feature
 generate.feature@org.eclipse.datatools.enablement.apache.derby.feature.source=org.eclipse.datatools.enablement.apache.derby.feature
@@ -32,5 +33,4 @@ generate.feature@org.eclipse.datatools.enablement.oracle.feature.source=org.ecli
 generate.feature@org.eclipse.datatools.enablement.postgresql.feature.source=org.eclipse.datatools.enablement.postgresql.feature
 generate.feature@org.eclipse.datatools.enablement.sap.feature.source=org.eclipse.datatools.enablement.sap.feature
 generate.feature@org.eclipse.datatools.enablement.sybase.feature.source=org.eclipse.datatools.enablement.sybase.feature
-
                
