--- a/features/org.eclipse.datatools.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk.feature/build.properties
@@ -3,6 +3,18 @@ bin.includes = eclipse_update_120.jpg,\
                feature.properties,\
                feature.xml,\
                license.html
-generate.feature@org.eclipse.datatools.sdk.feature.source=org.eclipse.datatools.sdk.feature
+generate.feature@org.eclipse.datatools.sdk.feature.source=org.eclipse.datatools.sdk.feature, \
+ org.eclipse.datatools.sqldevtools.feature, \
+ org.eclipse.datatools.modelbase.feature, \
+ org.eclipse.datatools.connectivity.feature, \
+ org.eclipse.datatools.connectivity.oda.designer.feature, \
+ org.eclipse.datatools.connectivity.oda.feature, \
+ org.eclipse.datatools.sqldevtools.feature, \
+ org.eclipse.datatools.sqldevtools.data.feature, \
+ org.eclipse.datatools.sqldevtools.ddl.feature, \
+ org.eclipse.datatools.sqldevtools.ddlgen.feature, \
+ org.eclipse.datatools.sqldevtools.parsers.feature, \
+ org.eclipse.datatools.sqldevtools.results.feature, \
+ org.eclipse.datatools.sqldevtools.sqlbuilder.feature
 
                
