--- a/features/org.eclipse.datatools.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk.feature/build.properties
@@ -4,17 +4,17 @@ bin.includes = eclipse_update_120.jpg,\
                feature.xml,\
                license.html
 generate.feature@org.eclipse.datatools.sdk.feature.source=org.eclipse.datatools.sdk.feature, \
- org.eclipse.datatools.sqldevtools.feature, \
- org.eclipse.datatools.modelbase.feature, \
- org.eclipse.datatools.connectivity.feature, \
- org.eclipse.datatools.connectivity.oda.designer.feature, \
- org.eclipse.datatools.connectivity.oda.feature, \
- org.eclipse.datatools.sqldevtools.feature, \
- org.eclipse.datatools.sqldevtools.data.feature, \
- org.eclipse.datatools.sqldevtools.ddl.feature, \
- org.eclipse.datatools.sqldevtools.ddlgen.feature, \
- org.eclipse.datatools.sqldevtools.parsers.feature, \
- org.eclipse.datatools.sqldevtools.results.feature, \
- org.eclipse.datatools.sqldevtools.sqlbuilder.feature
+ feature@org.eclipse.datatools.sqldevtools.feature, \
+ feature@org.eclipse.datatools.modelbase.feature, \
+ feature@org.eclipse.datatools.connectivity.feature, \
+ feature@org.eclipse.datatools.connectivity.oda.designer.feature, \
+ feature@org.eclipse.datatools.connectivity.oda.feature, \
+ feature@org.eclipse.datatools.sqldevtools.feature, \
+ feature@org.eclipse.datatools.sqldevtools.data.feature, \
+ feature@org.eclipse.datatools.sqldevtools.ddl.feature, \
+ feature@org.eclipse.datatools.sqldevtools.ddlgen.feature, \
+ feature@org.eclipse.datatools.sqldevtools.parsers.feature, \
+ feature@org.eclipse.datatools.sqldevtools.results.feature, \
+ feature@org.eclipse.datatools.sqldevtools.sqlbuilder.feature
 
                
