[254968]  Connecting dialog has redundant wording

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -19,7 +19,7 @@ ConnectJob.status.error=Could not connect to {0}.
 DisconnectJob.name=Closing connections to {0}.
 DisconnectJob.status.info=Could not close connections to {0} for one or more extensions.
 DisconnectJob.status.error=Could not disconnect from {0}.
-CreateConnectionJob.name=Creating {0} connection to {1}.
+CreateConnectionJob.name=Creating {0} to {1}.
 CreateConnectionJob.error=Error creating {0} connection to {1}. (Error\: {2})
 OpenConnectionEventJob.name=Processing open connection event for {0}.
 CloseManagedConnectionJob.name=Closing {0} connection to {1}.
