Add org.eclipse.datatools.enablement.sqlite.feature and org.eclipse.datatools.enablement.ingres.feature  for 1.7.0

--- a/features/org.eclipse.datatools.enablement.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.enablement.sdk.feature/build.properties
@@ -18,6 +18,8 @@ generate.feature@org.eclipse.datatools.enablement.feature.source=org.eclipse.dat
  feature@org.eclipse.datatools.enablement.oracle.feature, \
  feature@org.eclipse.datatools.enablement.postgresql.feature, \
  feature@org.eclipse.datatools.enablement.sap.feature, \
- feature@org.eclipse.datatools.enablement.sybase.feature
+ feature@org.eclipse.datatools.enablement.sybase.feature, \
+ feature@org.eclipse.datatools.enablement.ingres.feature, \
+ feature@org.eclipse.datatools.enablement.sqlite.feature
 
                
