[255586]Add a new enablment.sdk feature to hold all enablement souce

--- a/features/org.eclipse.datatools.enablement.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.enablement.sdk.feature/build.properties
@@ -4,22 +4,6 @@ bin.includes = eclipse_update_120.jpg,\
                feature.xml,\
                license.html
                
-generate.feature@org.eclipse.datatools.enablement.feature.source=org.eclipse.datatools.enablement.feature, \
- feature@org.eclipse.datatools.enablement.feature, \
- feature@org.eclipse.datatools.enablement.apache.derby.feature, \
- feature@org.eclipse.datatools.enablement.hsqldb.feature, \
- feature@org.eclipse.datatools.enablement.ibm.feature, \
- feature@org.eclipse.datatools.enablement.jdbc.feature, \
- feature@org.eclipse.datatools.enablement.jdt.feature, \
- feature@org.eclipse.datatools.enablement.msft.feature, \
- feature@org.eclipse.datatools.enablement.mysql.feature, \
- feature@org.eclipse.datatools.enablement.oda.designer.feature, \
- feature@org.eclipse.datatools.enablement.oda.feature, \
- feature@org.eclipse.datatools.enablement.oracle.feature, \
- feature@org.eclipse.datatools.enablement.postgresql.feature, \
- feature@org.eclipse.datatools.enablement.sap.feature, \
- feature@org.eclipse.datatools.enablement.sybase.feature, \
- feature@org.eclipse.datatools.enablement.ingres.feature, \
- feature@org.eclipse.datatools.enablement.sqlite.feature
+generate.feature@org.eclipse.datatools.enablement.feature.source=org.eclipse.datatools.enablement.feature
 
                
