--- a/features/org.eclipse.datatools.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.sdk.feature/build.properties
@@ -3,18 +3,9 @@ bin.includes = eclipse_update_120.jpg,\
                feature.properties,\
                feature.xml,\
                license.html
-generate.feature@org.eclipse.datatools.sdk.feature.source=org.eclipse.datatools.sdk.feature, \
- feature@org.eclipse.datatools.sqldevtools.feature, \
- feature@org.eclipse.datatools.modelbase.feature, \
- feature@org.eclipse.datatools.connectivity.feature, \
- feature@org.eclipse.datatools.connectivity.oda.designer.feature, \
- feature@org.eclipse.datatools.connectivity.oda.feature, \
- feature@org.eclipse.datatools.sqldevtools.feature, \
- feature@org.eclipse.datatools.sqldevtools.data.feature, \
- feature@org.eclipse.datatools.sqldevtools.ddl.feature, \
- feature@org.eclipse.datatools.sqldevtools.ddlgen.feature, \
- feature@org.eclipse.datatools.sqldevtools.parsers.feature, \
- feature@org.eclipse.datatools.sqldevtools.results.feature, \
- feature@org.eclipse.datatools.sqldevtools.sqlbuilder.feature
-
                
+generate.feature@org.eclipse.datatools.modelbase.feature.source=org.eclipse.datatools.modelbase.feature
+generate.feature@org.eclipse.datatools.connectivity.feature.source=org.eclipse.datatools.connectivity.feature
+generate.feature@org.eclipse.datatools.sqldevtools.feature.source=org.eclipse.datatools.sqldevtools.feature
+
+ 
