NEW - bug 250302: SQL server 2000/2005/2008 improvements https://bugs.eclipse.org/bugs/show_bug.cgi?id=250302

--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver.dbdefinition/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver.dbdefinition/plugin.xml
@@ -18,5 +18,12 @@
             versionDisplayString="%2005VersionString"
             file="runtime/vendors/SQL Server_2005/SQL Server_2005.xmi">
       </definition>
+      <definition
+            version="2008"
+            product="SQL Server"
+            productDisplayString="%2008ProductString"
+            versionDisplayString="%2008VersionString"
+            file="runtime/vendors/SQL Server_2008/SQL Server_2008.xmi">
+      </definition>
    </extension>
 </plugin>
