--- a/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.msft.sqlserver.ui/plugin.xml
@@ -28,6 +28,12 @@
       <propertyEditor
             customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
             driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2008.driverTemplate"
+            id="org.eclipse.datatools.enablement.msft.sqlserver.2008.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
             driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2005.driverTemplate"
             id="org.eclipse.datatools.enablement.msft.sqlserver.2005.driverTemplate.password">
       </propertyEditor>
@@ -66,8 +72,17 @@
             id="org.eclipse.datatools.enablement.msft.sqlserver.internal.ui.connection.drivers.2000.SQLServerOtherDriverUIContributor">
       </driverUIContributor>
    </extension>
-   
-      <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+
+  <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.msft.sqlserver.internal.ui.connection.drivers.SQLServer2008DriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2008.driverTemplate"
+            id="org.eclipse.datatools.enablement.msft.sqlserver.internal.ui.connection.drivers.SQLServer2008DriverUIContributor">
+      </driverUIContributor>
+   </extension>
+
+  
+  <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
       <driverUIContributor
             class="org.eclipse.datatools.enablement.msft.sqlserver.internal.ui.connection.drivers.SQLServer2005DriverUIContributor"
             driverTemplateID="org.eclipse.datatools.enablement.msft.sqlserver.2005.driverTemplate"
