245494: SQL Editor should allow token matching

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -11,6 +11,7 @@ DatabaseManagement.command.debug=Debug
 DatabaseManagement.command.savetodb=Save to Database
 DatabaseManagement.command.refresh=Refresh from Database
 DatabaseManagement.command.saveAsTemplate=Save as Template
+DatabaseManagement.command.gotomatchingtoken=Goto Matching Token
 
 sqlEditorName=SQL Editor
 
