Fix the bugzilla bug 245879 : SQL generated by 'Edit' of stored procedure is not runnable

--- a/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sybase.ase/plugin.xml
@@ -727,5 +727,20 @@
             </property>
          </properties>
       </driverTemplate>
-   </extension> 
+   </extension>
+    <extension
+          id="com.sybase.stf.dmp.ase.dbConfiguration"
+          name="ASE Support"
+          point="org.eclipse.datatools.sqltools.editor.core.dbConfigurations">
+       <dbConfiguration
+             configurationClass="org.eclipse.datatools.enablement.ase.ASEConfig"
+             product="Sybase_ASE"
+             version="15.x">
+       </dbConfiguration>
+       <dbConfiguration
+             configurationClass="org.eclipse.datatools.enablement.ase.ASEConfig"
+             product="Sybase_ASE"
+             version="12.x">
+       </dbConfiguration>
+    </extension> 
  </plugin>  
