[258336] Enhanced plugins o.e.d.sqltools.data.core and o.e.d.sqltools.data.ui to add extension point to allow filtering of rows/columns in the table data editor

--- a/plugins/org.eclipse.datatools.sqltools.data.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.data.core/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin>
 
-   <extension-point id="columnDataAccessors" name="Column Data Accessors" schema="schema/columnDataAccessors.exsd"/>
-
+	<extension-point id="columnDataAccessors" name="Column Data Accessors" schema="schema/columnDataAccessors.exsd"/>
+	<extension-point id="tableEditorResultFilter" name="External Filter for Table Editor" schema="schema/tableEditorResultFilter.exsd"/>
+ 	
 </plugin>
