246536: Listening to SQL Results

--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.xml
@@ -4,6 +4,7 @@
    <extension-point id="reExecuteScript" name="Re-execute History Result Entry" schema="schema/reExecuteScript.exsd"/>
    <extension-point id="resultSetOutputter" name="resultSetOutputter" schema="schema/resultSetOutputter.exsd"/>
    <extension-point id="resultSetViewer" name="Additional Viewers for ResultSets" schema="schema/resultSetViewer.exsd"/>
+   <extension-point id="resultListener" name="Result Listener" schema="schema/resultListener.exsd"/>
    <extension
          point="org.eclipse.ui.views">
       <view
