--- a/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore.ui/build.properties
@@ -7,10 +7,4 @@ bin.includes = plugin.xml,\
                icons/,\
                about.html,\
                schema/
-src.includes = about.html,\
-               schema/,\
-               src/,\
-               icons/,\
-               plugin.properties,\
-               plugin.xml,\
-               META-INF/
+src.includes = about.html
