--- a/plugins/org.eclipse.datatools.enablement.oda.ecore/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ecore/build.properties
@@ -5,8 +5,4 @@ bin.includes = plugin.xml,\
                .,\
                plugin.properties,\
                about.html
-src.includes = about.html,\
-               META-INF/,\
-               plugin.properties,\
-               plugin.xml,\
-               src/
+src.includes = about.html
