--- a/plugins/org.eclipse.datatools.releng.builder/eclipse/buildConfigs/dtp.enablement.all/build.properties
+++ b/plugins/org.eclipse.datatools.releng.builder/eclipse/buildConfigs/dtp.enablement.all/build.properties
@@ -14,6 +14,7 @@ baseLocation=/home/adb/farrah/baseLocation
 p4.home=/home/adb/farrah/P4
 buildDirectory=/home/adb/farrah/src
 outputUpdateJars=true
+individualSourceBundles=true
 
 runPackager=true
 mapVersionTag=HEAD
