[261591] Add packages for ODA Ecore component  in DTP Incubator project

--- a/features/org.eclipse.datatools.enablement.oda.ecore.feature/build.properties
+++ b/features/org.eclipse.datatools.enablement.oda.ecore.feature/build.properties
@@ -3,3 +3,6 @@ bin.includes = eclipse_update_120.jpg,\
                feature.properties,\
                feature.xml,\
                license.html
+               
+generate.feature@org.eclipse.datatools.enablement.oda.ecore.feature.source=org.eclipse.datatools.enablement.oda.ecore.feature
+               
