--- a/features/org.eclipse.datatools.enablement.oda.ecore.sdk.feature/build.properties
+++ b/features/org.eclipse.datatools.enablement.oda.ecore.sdk.feature/build.properties
@@ -4,4 +4,5 @@ bin.includes = eclipse_update_120.jpg,\
                feature.xml,\
                license.html
                
+generate.feature@org.eclipse.datatools.enablement.oda.ecore.feature.source=org.eclipse.datatools.enablement.oda.ecore.feature
                
