--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/preferences/PreferenceMessages.properties
@@ -28,6 +28,14 @@ SQLEditor_showPromptDialog=Prompt to disable syntax validation when content exce
 SQLEditor_showSyntaxErorrDetail=S&how detailed annotation information
 SQLEditor_showSyntaxErorrDetail_tooltip=Show detailed annotation information, such as some syntax proposals
 
+SQLEditor_executeCurrentSQLGroup=Execute current text
+SQLEditor_executeSQLBetweenDelimiter=Execute SQLs between delimiters
+SQLEditor_executeSQLBetweenDelimiter_tip=Execute SQLs between the delimiters before and after current cursor position
+SQLEditor_executeCurrentLine=Execute current line
+SQLEditor_executeCurrentLine_tip=Execute the line text where the cursor place
+SQLEditor_executeSQLBetweenBlankLine=Execute SQLs between blank lines
+SQLEditor_executeSQLBetweenBlankLine_tip=Execute SQLs between the blank lines before and after current cursor position
+
 SQLEditor_typing_title=&Typing
 SQLEditor_typingAidsGroup_title=Enable these typing aids in Smart Insert mode:
 SQLEditor_typingAidsTable_columnName1=Name
