--- a/plugins/org.eclipse.datatools.releng.builder/extras/dtp.sc.template
+++ b/plugins/org.eclipse.datatools.releng.builder/extras/dtp.sc.template
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
+<!-- deprecated in Galileo release -->
 <sc:siteContribution
     xmlns="http://www.eclipse.org/buckminster/CSpec-1.0"
     xmlns:sc="http://www.eclipse.org/buckminster/SiteContribution-1.0"
