NEW - bug 262801: CNF fix for Eclipse 3.5 M5 CNF API change https://bugs.eclipse.org/bugs/show_bug.cgi?id=262801

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -30,6 +30,8 @@
 						property="org.eclipse.datatools.connectivity.profile.property.factoryID"
 						value="org.eclipse.datatools.connectivity.sqm.core.connection.ConnectionInfo"/>
                   </and>
+                  <instanceof value="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentExtension"/>
+                  <instanceof value="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.loading.LoadingNode"/>
                 </or>
             </triggerPoints>
             <possibleChildren>
