--- a/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda/plugin.xml
@@ -3,7 +3,7 @@
 <!--
 /**
  *************************************************************************
- * Copyright (c) 2004, 2006 Actuate Corporation.
+ * Copyright (c) 2004, 2009 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -14,10 +14,11 @@
  *  
  *************************************************************************
  *
- * $Id: $
+ * $Id: plugin.xml,v 1.13 2006/03/10 00:43:15 lchan Exp $
  */
 -->
 
 <plugin>
-    	<extension-point id="dataSource" name="Open Data Access Design and Run-time Extension" schema="schema/datasource.exsd"/>
+     <extension-point id="dataSource" name="Open Data Access Design and Run-time Extension" schema="schema/datasource.exsd"/>
+     <extension-point id="filterExpressions" name="ODA Filter Expressions" schema="schema/filterExpressions.exsd"/>
 </plugin>
