[262874] ODA Data Filtering Specification model - minor refactoring

--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
@@ -52,5 +52,99 @@
                odaScalarDataType="Boolean"/>
       </dataSet>
    </extension>
+     <extension
+           id="filterExtension"
+           point="org.eclipse.datatools.connectivity.oda.filterExpressions">
+        <contributor
+              testerClass="org.eclipse.datatools.connectivity.oda.consumer.testdriver.filter.impl.FilterExprTester">
+         <supportedDataSetType
+               odaDataSetId="org.eclipse.datatools.connectivity.oda.consumer.testdriver.dataSet"
+               odaDataSourceId="org.eclipse.datatools.connectivity.oda.consumer.testdriver">
+         </supportedDataSetType>
+         <supportedDataSetType
+               odaDataSetId="org.eclipse.datatools.connectivity.oda.consumer.testdriver.jdbc.dbprofile.sqbDataSet"
+               odaDataSourceId="org.eclipse.datatools.connectivity.oda.consumer.testdriver.jdbc.dbprofile">
+         </supportedDataSetType>
+         <supportedOdaExpression
+               expressionId="AndExpression">
+         </supportedOdaExpression>
+         <supportedOdaExpression
+               expressionId="OrExpression">
+         </supportedOdaExpression>
+         <supportedOdaExpression
+               expressionId="NotExpression">
+         </supportedOdaExpression>
+        </contributor>
+        <customExpression
+              displayName="Equal to"
+              id="0"
+              isNegatable="true"
+              isOptionable="true"
+              maxArguments="*"
+              minArguments="1">
+        </customExpression>
+        <customExpression
+              displayName="Between"
+              id="1001"
+              isNegatable="true"
+              isOptionable="true"
+              maxArguments="2"
+              minArguments="1">
+           <variableRestriction
+                 variableType="ResultSetColumn">
+              <variableOdaDataTypeRestriction
+                    odaScalarDataType="String">
+              </variableOdaDataTypeRestriction>
+              <variableOdaDataTypeRestriction
+                  odaScalarDataType="Integer">
+              </variableOdaDataTypeRestriction>
+         	  <variableOdaDataTypeRestriction
+            	  odaScalarDataType="Double">
+         	  </variableOdaDataTypeRestriction>
+         	  <variableOdaDataTypeRestriction
+               	  odaScalarDataType="Decimal">
+         	  </variableOdaDataTypeRestriction>
+         	  <variableOdaDataTypeRestriction
+               	  odaScalarDataType="Date">
+         	  </variableOdaDataTypeRestriction>
+         	  <variableOdaDataTypeRestriction
+               	  odaScalarDataType="Time">
+         	  </variableOdaDataTypeRestriction>
+         	  <variableOdaDataTypeRestriction
+               	  odaScalarDataType="Timestamp">
+         	  </variableOdaDataTypeRestriction>
+           </variableRestriction>
+        </customExpression>
+        <customExpression
+              displayName="In"
+              id="1003"
+              isNegatable="true"
+              isOptionable="true"
+              maxArguments="*"
+              minArguments="1">
+        </customExpression>
+        <customExpression
+              displayName="IsNull"
+              id="1005"
+              isNegatable="true"
+              isOptionable="false"
+              maxArguments="0"
+              minArguments="0">
+        </customExpression>
+        <customExpression
+              displayName="IsInstanceOf"
+              id="2000"
+              isNegatable="true"
+              isOptionable="false"
+              maxArguments="1"
+              minArguments="1">
+           <variableRestriction
+                 variableType="InstanceOf">
+              <variableClassRestriction
+                    class="org.eclipse.datatools.connectivity.oda.consumer.testdriver.OrderItem">
+              </variableClassRestriction>
+           </variableRestriction>
+        </customExpression>
+     </extension>
    
 </plugin>
