[262874] Minor updates to example in tests

--- a/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
+++ b/tests/org.eclipse.datatools.connectivity.oda.consumer.testdriver/plugin.xml
@@ -133,7 +133,7 @@
         </customExpression>
         <customExpression
               displayName="IsInstanceOf"
-              id="2000"
+              id="instanceOf"
               isNegatable="true"
               isOptionable="false"
               maxArguments="1"
