--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -1,5 +1,5 @@
 ################################################################################
-## Copyright (c) 2005, 2008 Sybase, Inc.
+## Copyright (c) 2005, 2009 Sybase, Inc.
 ## All rights reserved. This program and the accompanying materials
 ## are made available under the terms of the Eclipse Public License v1.0
 ## which accompanies this distribution, and is available at
@@ -8,6 +8,7 @@
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
 ##	  IBM Corporation = bug fix #203829
+##	  Actuate Corporation - bug fix #261452
 ################################################################################ 
 plugin.internal_error=Internal Error - org.eclipse.datatools.connectivity
 ImportProfilesDialog.btnOverwrite.text=&Overwrite existing connection profiles with same names
@@ -21,7 +22,7 @@ ImportProfilesDialog.label.text=Specify a &file name:
 ImportProfilesDialog.text.text=Note: the connection profile to be imported should be those types you can \n  create using the new connection profile wizard, unsupported types of \n  connection profiles will be discarded.
 ExportProfilesDialog.null.title=Export Connection Profiles
 ImportProfilesDialog.null.title=Import Connection Profiles
-ExportProfilesDialog.btnEncryption.text=Encrypt file content
+ExportProfilesDialog.btnEncryption.text=&Encrypt file content
 actions.export.noselection = Please select at least one connection profile!
 actions.export.nofile = Please specify file name!
 actions.export.norepository = Please specify a target repository!
@@ -165,7 +166,7 @@ CommonDriverUIContributor.generaltab = G&eneral
 OtherDriverUIContributor.databaseName.label = D&atabase:
 OtherDriverUIContributor.url.label = &URL:
 OtherDriverUIContributor.userName.label = U&ser name:
-OtherDriverUIContributor.password.label = &Password:
+OtherDriverUIContributor.password.label = Pass&word:
 OtherDriverUIContributor.savePassword.label = Sa&ve password
 OtherDriverUIContributor.summaryData.database = Database
 OtherDriverUIContributor.summaryData.username = User name
