Sync build script for 1.7

--- a/plugins/org.eclipse.datatools.releng.builder/build.properties
+++ b/plugins/org.eclipse.datatools.releng.builder/build.properties
@@ -26,7 +26,7 @@ bootclasspath=${java.home}/lib/rt.jar
 javacDebugInfo=false
 
 # Whether or not to fail the build if there are compiler errors
-javacFailOnError=true
+javacFailOnError=false
 
 # Enable or disable verbose mode of the compiler
 javacVerbose=true
@@ -40,23 +40,16 @@ javacVerbose=true
 # Default value for the version of the byte code targeted. This value is used when compiling plug-ins that do not set the Bundle-RequiredExecutionEnvironment or set javacTarget in build.properties.
 #javacTarget=1.1
 
-buildDirectory=/home/adb/releng.dtp/src
+buildDirectory=/home/adb/releng.dtp.170/src
 
-postingDirectory=/home/adb/releng.dtp/dtp.output/1.6
+postingDirectory=/home/adb/releng/BIRTOutput/dtp.output/1.7
 
-baseLocation=/home/adb/releng.dtp/baseLocation
+baseLocation=/home/adb/releng.dtp.170/baseLocation
 
-eclipse.pdebuild.scripts=/home/adb/releng.dtp/org.eclipse.releng.basebuilder/plugins/org.eclipse.pde.build/scripts
+eclipse.pdebuild.scripts=/home/adb/releng.dtp.170/org.eclipse.releng.basebuilder/plugins/org.eclipse.pde.build/scripts
 
-eclipse.pdebuild.templates=/home/adb/releng.dtp/src/org.eclipse.releng.basebuilder/plugins/org.eclipse.pde.build/templates
+eclipse.pdebuild.templates=/home/adb/releng.dtp.170/src/org.eclipse.releng.basebuilder/plugins/org.eclipse.pde.build/templates
 
-eclipse.pdebuild.home=/home/adb/releng.dtp/org.eclipse.releng.basebuilder
+eclipse.pdebuild.home=/home/adb/releng.dtp.170/org.eclipse.releng.basebuilder
 
 
-#####################################
-#  DTP download setting             #
-#####################################
-
-#file-prefix=dtp-sdk_1.6M5_
-#file-suffix=0.7.0.200602241
-#file-version=dtp-sdk_1.6M4d
