Sync build script for 1.6

--- a/plugins/org.eclipse.datatools.releng.builder/build.properties
+++ b/plugins/org.eclipse.datatools.releng.builder/build.properties
@@ -26,7 +26,7 @@ bootclasspath=${java.home}/lib/rt.jar
 javacDebugInfo=false
 
 # Whether or not to fail the build if there are compiler errors
-javacFailOnError=true
+javacFailOnError=false
 
 # Enable or disable verbose mode of the compiler
 javacVerbose=true
